--- a/cryptocurrency/website/crypto/templates/base.html
+++ b/cryptocurrency/website/crypto/templates/base.html
@@ -45,13 +45,11 @@
         }
     </style>
 
-    
 
-    
     <!-- Smartsupp Live Chat script -->
     <script type="text/javascript">
         var _smartsupp = _smartsupp || {};
-        _smartsupp.key = '6f4b493c132392aa3d08cb2e88b03c62f02bbb28';
+        _smartsupp.key = '6cbb7a2e7689c809432b97175f5f9d102d0e7958';
         window.smartsupp||(function(d) {
             var s,c,o=smartsupp=function(){ o._.push(arguments)};o._=[];
             s=d.getElementsByTagName('script')[0];c=d.createElement('script');
@@ -123,8 +121,8 @@
                     <a href="{% static 'media/certificate.jpg' %}"
                         class="btn btn-border btn-sm width-190 active full-width-sm" download>CERTIFICATE</a>
                     <div class="icon-links icon-social icon-links-grid social-colors" style="margin-top: 20px;">
-                        <a class="facebook" href="#" ><i class="fa-brands fa-facebook"></i></a>
-                        <a class="twitter" href="#" ><i class="fa-brands fa-twitter"></i></a>
+                        <a class="facebook" href="#" ><i class="fa-brands fa-telegram"></i></a>
+                        <a class="twitter" href="https://wa.me/message/2DCLP4XAJ3X7F1" ><i class="fa-brands fa-whatsapp"></i></a>
                         <a class="instagram" href="https://instagram.com/apex_fortitude?igshid=MzRlODBiNWFlZA=="><i class="fa-brands fa-instagram"></i></a>
                     </div>
                 </div>
