--- a/cryptocurrency/website/crypto/templates/crypto/home.html
+++ b/cryptocurrency/website/crypto/templates/crypto/home.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block body %}
+<link rel="stylesheet" href="{% static 'custom/css/custom.css'%}">
 <main>
     <section class="section-image section-home-one no-padding-y">
         <div class="container">
@@ -552,22 +553,22 @@
                         <div class="grid-box">
                             <div class="grid-item">
                                 <a class="img-box" href="https://trustwallet.com/" target="_blank">
-                                    <img src="{% static 'media/point1.jpg' %}" alt="" style="height: 7vh; width: 100%; object-fit: cover;">
+                                    <img src="{% static 'media/point1.jpg' %}" alt="" style="height: 10vh; width: 100%; object-fit: fill;">
                                 </a>
                             </div>
                             <div class="grid-item">
                                 <a class="img-box" href="https://www.okx.com/" target="_blank">
-                                    <img src="{% static 'media/point2.jpg' %}" alt="" style="height: 7vh; width: 100%; object-fit: cover;">
+                                    <img src="{% static 'media/point2.jpg' %}" alt="" style="height: 10vh; width: 100%; object-fit: fill;">
                                 </a>
                             </div>
                             <div class="grid-item">
                                 <a class="img-box" href="https://www.luno.com/en/ng" target="_blank">
-                                    <img src="{% static 'media/point3.jpg' %}" alt="" style="height: 7vh; width: 100%; object-fit: cover;">
+                                    <img src="{% static 'media/point3.jpg' %}" alt="" style="height: 10vh; width: 100%; object-fit: fill;">
                                 </a>
                             </div>
                             <div class="grid-item">
                                 <a class="img-box" href="https://accounts.binance.com/" target="_blank">
-                                    <img src="{% static 'media/point4.jpg' %}" style="height: 7vh; width: 100%; " alt="">
+                                    <img src="{% static 'media/point4.jpg' %}" style="height: 10vh; width: 100%; object-fit: fill;" alt="">
                                 </a>
                             </div>
                         </div>
