--- a/cryptocurrency/website/crypto/templates/crypto/register.html
+++ b/cryptocurrency/website/crypto/templates/crypto/register.html
@@ -48,13 +48,13 @@
 			</div>
 
 			<div class="col-lg-6">
-				{{forms.btc_wallet.label_tag}}
-				{{forms.btc_wallet}}
+				{{forms.btc_wallet_address.label_tag}}
+				{{forms.btc_wallet_address}}
 
 			</div>
 			<div class="col-lg-6">
-				{{forms.usdt_trc20_wallet.label_tag}}
-				{{forms.usdt_trc20_wallet}}
+				{{forms.usdt_trc20_wallet_address.label_tag}}
+				{{forms.usdt_trc20_wallet_address}}
 
 			</div>
 			<div class="col-lg-6">
