--- a/cryptocurrency/website/crypto/templates/crypto/editprofile.html
+++ b/cryptocurrency/website/crypto/templates/crypto/editprofile.html
@@ -38,19 +38,19 @@
 			</div>
 
 			<div class="col-lg-6">
-				{{form.btc_wallet.label_tag}}
-				{{form.btc_wallet}}
+				{{form.btc_wallet_address.label_tag}}
+				{{form.btc_wallet_address}}
 
 			</div>
 			<div class="col-lg-6">
-				{{form.eth_wallet.label_tag}}
-				{{form.eth_wallet}}
+				{{form.eth_wallet_address.label_tag}}
+				{{form.eth_wallet_address}}
 
 			</div>
 
 			<div class="col-lg-6">
-				{{form.usdt_trc20_wallet.label_tag}}
-				{{form.usdt_trc20_wallet}}
+				{{form.usdt_trc20_wallet_address.label_tag}}
+				{{form.usdt_trc20_wallet_address}}
 
 			</div>
 			<div class="col-lg-6">
