--- a/cryptocurrency/website/crypto/templates/base.html
+++ b/cryptocurrency/website/crypto/templates/base.html
@@ -156,7 +156,7 @@
         <div class="footer-bar">
             <div class="container">
                 <span>© 2023 <a href="">apexfortitude.com</a>.</span>
-                <span><a href="">Contact us</a> | <a href="">Terms &
+                <span><a href="{% url 'contact' %}">Contact us</a> | <a href="{% url 'terms' %}">Terms &
                         Conditions</a></span>
             </div>
         </div>
