--- a/cryptocurrency/website/crypto/templates/crypto/terms.html
+++ b/cryptocurrency/website/crypto/templates/crypto/terms.html
@@ -18,6 +18,7 @@
 <p>The Apexfortitude website/platform is available in English Language. The English version is the original version and the only one binding on saudiventures.org; it shall prevail on any other version in case of discrepancy. saudiventures.org is not responsible for any erroneous, inadequate, or misleading translations from the original version into other languages unless communicated to users.
     Apexfortitude allows access to its web page and users related services by any individual or corporate entity (herein after referred to as the Investor/Client) according to the procedure and on the terms and conditions described in this Agreement.The Agreement becomes effective as of the date the Investor opened an investment account and transferred funds to the Company’s account(s) to ensure minimum investment deposit.In the Agreement any reference to an individual person includes corporate entities, unincorporated associations, partnerships and individuals.Headings and notes in the Agreement are for reference only and shall not affect the contents and interpretation of the Agreement.
 </p>
+<br>
 <h2>INVESTORS AND COMPANY’S RESPONSIBILITIES</h2> 
 <p>
     <ul>
@@ -28,10 +29,8 @@
         <li>Any market recommendations and information communicated to an Investor by our representatives do not constitute as an offer to make operation/transaction.</li>
     </ul>    
 </p>
-    
-
+<br>
 <h2>INVESTOR AGREES THAT:</h2>
-
 <p>
     <ul>
         <li>Any actions/error committed by an investor which destabilize the Company’s business or performance of the Company’s services, equipment, or software may result in the Company’s refusal (on the basis of private law) of servicing the Investor’s current investment/trading account and cancellation of all investment orders, with full refund of the remaining deposit. Apexfortitude would notify the Investor about the reasons for the above decision. Apexfortitude also may reject such Investor’s new registration in the future.</li>
@@ -43,9 +42,7 @@
         <li>In case of double registration of the same Client, has the right to cancel duplicated registrations, cancel opened positions and withdrawal requests. All duplicated accounts will be frozen for investigation purposes.</li>
     </ul>     
 </p>
-
-    
-
+<br>
 <h2>INVESTMENT RISK MANAGEMENT</h2>
 <p>
     <ul>
@@ -55,7 +52,7 @@
         <li>Investor bears full responsibility for the risks associated with the storage of trading account access data, and must ensure that third parties cannot access the trade terminals. Investor’s losses and risks associated with the restoration of access to the trading account imposes no obligations on Apexfortitude, other than to provide new access data to the Investor after identification procedure.</li>
     </ul> 
 </p>
-
+<br>
 <h2>INVESTMENT PROCEDURES</h2>
 <p>
     <ul>
@@ -69,6 +66,7 @@
         <li>Apexfortitude reserves the right to reject a request for withdrawal in case of an explicit intention to exchange Investor’s funds from one payment system to another.</li>
     </ul>  
 </p>
-<h1>In the Agreement references to any law shall include references to any statutory modification or re-enactment therefore to any regulation or order made under such law, statute or enactment (or under such a modification or re-enactment).</h1>
+<br>
+<h3><strong>In the Agreement references to any law shall include references to any statutory modification or re-enactment therefore to any regulation or order made under such law, statute or enactment (or under such a modification or re-enactment).</strong></h3>
 
 {% endblock %}
