--- a/cryptocurrency/website/crypto/templates/base.html
+++ b/cryptocurrency/website/crypto/templates/base.html
@@ -133,6 +133,7 @@
                         <li><a href="{% url 'investment' %}">Investment</a></li>
                         <li><a href="{% url 'contact' %}">Contact Us</a></li>
                         <li><a href="{% url 'faq' %}">Faq</a></li>
+                        <li><a href="{% url 'terms' %}">Terms and Conditions</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-4">
