--- a/cryptocurrency/website/crypto/templates/crypto/register.html
+++ b/cryptocurrency/website/crypto/templates/crypto/register.html
@@ -21,7 +21,7 @@
 		</div>
 		{% endif %}
 		{% for message in messages %}
-		<center><span class="success">{{message}}</span></center>
+		<center><span class="success" style="color: yellow; background-color: black;">{{message}}</span></center>
 		{% endfor %}
 		{% csrf_token %}
 		<div class="row">
