--- a/cryptocurrency/website/crypto/templates/crypto/login.html
+++ b/cryptocurrency/website/crypto/templates/crypto/login.html
@@ -16,7 +16,7 @@
     <br>
     <form action="" method="post">
         {% if form.errors %}
-        <div class="errors">
+        <div class="errors" style="color: yellow; background-color: black;">
             <p>username or password incorrect try again.</p>
         </div>
         <br>
