--- a/cryptocurrency/website/crypto/templates/crypto/dashboard.html
+++ b/cryptocurrency/website/crypto/templates/crypto/dashboard.html
@@ -101,7 +101,7 @@
               </div>
             </div>
             <div class="c-chart-wrapper mt-3 mx-3" style="height:70px;">
-              <p>
+              <p style="font-size: xx-small;">
                 Pending withdrawal is the amount withdraw that is yet to be processed.
               </p>
               <!--<canvas class="chart" id="card-chart4" height="70"></canvas>-->
