--- a/cryptocurrency/website/crypto/templates/crypto/dashboard.html
+++ b/cryptocurrency/website/crypto/templates/crypto/dashboard.html
@@ -21,8 +21,7 @@
               </div>
             </div>
             <div class="c-chart-wrapper mt-3 mx-3" style="height:70px;">
-              <p>Available balance are withdrawable balance while  system  earning is your daily accumulated
-                profits within  the duration of investment.
+              <p style="font-size: x-small;">Available balance are withdrawable balance while  system  earning is your daily profit earned.
               </p>
               <!--<canvas class="chart" id="card-chart1" height="70"></canvas>-->
             </div>
@@ -48,7 +47,8 @@
               </div>
             </div>
             <div class="c-chart-wrapper mt-3 mx-3" style="height:70px;">
-              <p>Total Withdrawal is the total amount you have successfully withdraw from your  account.
+              <p style="font-size: x-small;">
+                Total Withdrawal is the total amount you have successfully withdraw from your  account.
               </p>
               <!--<canvas class="chart" id="card-chart2" height="70"></canvas>-->
             </div>
@@ -73,8 +73,8 @@
                 </button>
               </div>
             </div>
-            <div class="c-chart-wrapper mt-3" style="height:70px;">
-              <p>
+            <div class="c-chart-wrapper mt-3 mx-3" style="height:70px;">
+              <p style="font-size: x-small;" >
                 Active deposit shows the amount of funds currently  invested.
               </p>
               <!--<canvas class="chart" id="card-chart3" height="70"></canvas>-->
@@ -101,7 +101,7 @@
               </div>
             </div>
             <div class="c-chart-wrapper mt-3 mx-3" style="height:70px;">
-              <p style="font-size: xx-small;">
+              <p style="font-size: x-small;">
                 Pending withdrawal is the amount withdraw that is yet to be processed.
               </p>
               <!--<canvas class="chart" id="card-chart4" height="70"></canvas>-->
@@ -109,39 +109,43 @@
           </div>
         </div>
         <!-- /.col-->
+
+
+        <div class="row">
+          <div class="col-sm-12 col-lg-12">
+              <div class="card mb-4" style="--cui-card-cap-bg: #3b5998">
+                  <div class="card-header text-light" style="height: 15vh;">
+                      <h3>Referal</h3>
+                      <div class="progress">
+                          <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" id="progress" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                      </div>
+                  </div>
+                  <div class="card-body row text-center">
+                      <div class="col">
+                          <div class="fs-5 fw-semibold">{{total}}</div>
+                          <div class="text-uppercase text-medium-emphasis small">Referals</div>
+                      </div>
+                      <div class="vr"></div>
+                      <div class="col">
+                          <div class="fs-5 fw-semibold">{% if earnings %}${{earnings}}{% else %}$0{% endif %}</div>
+                          <div class="text-uppercase text-medium-emphasis small">Earnings</div>
+                      </div>
+                  </div>
+              </div>
+          <div class="input-group mb-3">
+              <input type="text" class="form-control" id="wallet" disabled>
+              <div class="input-group-append">
+                <span class="input-group-text bg-primary text-light" id="copy">Copy</span>
+              </div>
+          </div>
+        </div>
+
+
+
+
       </div>
     </div>
 
-
-
-    <div class="row">
-      <div class="col-sm-12 col-lg-12">
-          <div class="card mb-4" style="--cui-card-cap-bg: #3b5998">
-              <div class="card-header text-light" style="height: 15vh;">
-                  <h3>Referal</h3>
-                  <div class="progress">
-                      <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" id="progress" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-              </div>
-              <div class="card-body row text-center">
-                  <div class="col">
-                      <div class="fs-5 fw-semibold">{{total}}</div>
-                      <div class="text-uppercase text-medium-emphasis small">Referals</div>
-                  </div>
-                  <div class="vr"></div>
-                  <div class="col">
-                      <div class="fs-5 fw-semibold">{% if earning %}${{earning}}{% else %}$0{% endif %}</div>
-                      <div class="text-uppercase text-medium-emphasis small">Earnings</div>
-                  </div>
-              </div>
-          </div>
-      <div class="input-group mb-3">
-          <input type="text" class="form-control" id="wallet" disabled>
-          <div class="input-group-append">
-            <span class="input-group-text bg-primary text-light" id="copy">Copy</span>
-          </div>
-      </div>
-    </div>
 
 
     <!--Table content-->
@@ -174,4 +178,18 @@
     </table>
   </div>
 </div>
+
+
+<script>
+  const value = '{{total}}'
+  const btn = document.getElementById('copy');
+  const progress = document.getElementById('progress');
+  progress.style.width = `${value}0%`
+  const wallet = document.getElementById('wallet');
+  wallet.value = `${window.location.origin}/register/{{refer}}`
+  btn.addEventListener('click', ()=>{
+      btn.innerText = 'copied'
+      navigator.clipboard.writeText(`${wallet.value}`)
+  })
+</script>
 {% endblock %}
