--- a/cryptocurrency/website/crypto/templates/crypto/dashboard.html
+++ b/cryptocurrency/website/crypto/templates/crypto/dashboard.html
@@ -21,7 +21,7 @@
               </div>
             </div>
             <div class="c-chart-wrapper mt-3 mx-3" style="height:70px;">
-              <p style="font-size: x-small;">Available balance are withdrawable balance while  system  earning is your daily profit earned.
+              <p style="font-size: small;">Available balance are withdrawable balance while  system  earning is your daily profit earned.
               </p>
               <!--<canvas class="chart" id="card-chart1" height="70"></canvas>-->
             </div>
@@ -47,7 +47,7 @@
               </div>
             </div>
             <div class="c-chart-wrapper mt-3 mx-3" style="height:70px;">
-              <p style="font-size: x-small;">
+              <p style="font-size: small;">
                 Total Withdrawal is the total amount you have successfully withdraw from your  account.
               </p>
               <!--<canvas class="chart" id="card-chart2" height="70"></canvas>-->
@@ -74,7 +74,7 @@
               </div>
             </div>
             <div class="c-chart-wrapper mt-3 mx-3" style="height:70px;">
-              <p style="font-size: x-small;" >
+              <p style="font-size: small;" >
                 Active deposit shows the amount of funds currently  invested.
               </p>
               <!--<canvas class="chart" id="card-chart3" height="70"></canvas>-->
@@ -101,7 +101,7 @@
               </div>
             </div>
             <div class="c-chart-wrapper mt-3 mx-3" style="height:70px;">
-              <p style="font-size: x-small;">
+              <p style="font-size: small;">
                 Pending withdrawal is the amount withdraw that is yet to be processed.
               </p>
               <!--<canvas class="chart" id="card-chart4" height="70"></canvas>-->
