--- a/cryptocurrency/website/crypto/templates/crypto/login.html
+++ b/cryptocurrency/website/crypto/templates/crypto/login.html
@@ -16,8 +16,8 @@
     <br>
     <form action="" method="post">
         {% if form.errors %}
-        <div class="errors" style="color: yellow; background-color: black;">
-            <p>username or password incorrect try again.</p>
+        <div class="errors" style= background-color: black;">
+            <p style="color: yellow;">username or password incorrect try again.</p>
         </div>
         <br>
         {% endif %}
