--- a/cryptocurrency/website/crypto/templates/crypto/login.html
+++ b/cryptocurrency/website/crypto/templates/crypto/login.html
@@ -22,7 +22,7 @@
         <br>
         {% endif %}
         {% for message in messages %}
-        <div class="success">
+        <div class="success" style="color: yellow; background-color: black; " >
             {{message}}
         </div>
         {% endfor %}
