--- a/cryptocurrency/website/crypto/templates/crypto/dashboard.html
+++ b/cryptocurrency/website/crypto/templates/crypto/dashboard.html
@@ -123,7 +123,7 @@
                 </div>
                 <div class="card-body row text-center">
                     <div class="col">
-                        <div class="fs-5 fw-semibold">{% if total %}${{total}}{% else %}0{% endif %}</div>
+                        <div class="fs-5 fw-semibold">{% if total %}{{total}}{% else %}0{% endif %}</div>
                         <div class="text-uppercase text-medium-emphasis small">Referals</div>
                     </div>
                     <div class="vr"></div>
