--- a/cryptocurrency/website/crypto/templates/base.html
+++ b/cryptocurrency/website/crypto/templates/base.html
@@ -44,8 +44,17 @@
             top: 0px !important;
         }
     </style>
-<!-- Smartsupp Live Chat script --> <script type="text/javascript"> var _smartsupp = _smartsupp || {}; _smartsupp.key = '7be9da150748b72081e5f0fe0b218fa72408b069'; window.smartsupp||(function(d) { var s,c,o=smartsupp=function(){ o._.push(arguments)};o._=[]; s=d.getElementsByTagName('script')[0];c=d.createElement('script'); c.type='text/javascript';c.charset='utf-8';c.async=true; c.src='https://www.smartsuppchat.com/loader.js?';s.parentNode.insertBefore(c,s); })(document); </script>
-
+    <!-- Smartsupp Live Chat script -->
+    <script type="text/javascript">
+        var _smartsupp = _smartsupp || {};
+        _smartsupp.key = 'f2cba6ba79fdcdff48af5332e03c7b15b0bbb2b5';
+        window.smartsupp||(function(d) {
+        	var s,c,o=smartsupp=function(){ o._.push(arguments)};o._=[];
+        	s=d.getElementsByTagName('script')[0];c=d.createElement('script');
+        	c.type='text/javascript';c.charset='utf-8';c.async=true;
+        	c.src='https://www.smartsuppchat.com/loader.js?';s.parentNode.insertBefore(c,s);
+        })(document);
+    </script>
 
 
 </head>
