--- a/cryptocurrency/website/crypto/templates/base.html
+++ b/cryptocurrency/website/crypto/templates/base.html
@@ -121,7 +121,7 @@
                     <a href="{% static 'media/certificate.jpg' %}"
                         class="btn btn-border btn-sm width-190 active full-width-sm" download>CERTIFICATE</a>
                     <div class="icon-links icon-social icon-links-grid social-colors" style="margin-top: 20px;">
-                        <a class="facebook" href="#" ><i class="fa-brands fa-telegram"></i></a>
+                        <a class="facebook" href="https://www.facebook.com/groups/1842462579483447/?ref=share" ><i class="fa-brands fa-facebook"></i></a>
                         <a class="twitter" href="https://wa.me/message/ZPAPLW5BMGQQB1" ><i class="fa-brands fa-whatsapp"></i></a>
                         <a class="instagram" href="https://instagram.com/apex_fortitude?igshid=MzRlODBiNWFlZA=="><i class="fa-brands fa-instagram"></i></a>
                     </div>
@@ -156,7 +156,7 @@
         </div>
         <div class="footer-bar">
             <div class="container">
-                <span>© <script>document.write(new Date().getFullYear())</script><a href="">apexfortitude.com</a>.</span>
+                <span>© <script>document.write(new Date().getFullYear())</script><a href="">apexfortitude.com</a></span>
                 <span><a href="{% url 'contact' %}">Contact us</a> | <a href="{% url 'terms' %}">Terms &
                         Conditions</a></span>
             </div>
