--- a/cryptocurrency/website/crypto/templates/base2.html
+++ b/cryptocurrency/website/crypto/templates/base2.html
@@ -124,7 +124,7 @@
           {% block body %}
           {% endblock %}
           <footer class="footer">
-            <div>support©2023Apex-Fortitude All right reserved.</div>
+            <div><script>document.write(new Date().getFullYear())</script>©Apex-Fortitude All right reserved.</div>
           </footer>
         </div>
         <!-- CoreUI and necessary plugins-->
