--- a/cryptocurrency/website/crypto/templates/crypto/home.html
+++ b/cryptocurrency/website/crypto/templates/crypto/home.html
@@ -25,7 +25,11 @@
                         </li>
                     </ul>
                     <p>
-                        Crypto Currency is a digital currency, created and held electronically. It is an internet-based medium of exchange which uses cryptographic functions to conduct financial transactions. They are not printed, like other currencies – they are produced by people, and increasingly businesses, running computers all around the world, using software that solves mathematical problems.
+                        APEX FORTITUDE is one of the world’s leading multi-asset alternative investment firms. 
+                        Our global team aligns our interests with those of our investors and partners for lasting impact. 
+                        with over $95 billion in assets under management. The company got its current name from a pioneer 
+                        Late Mr. Santos and the name according to him meant peak of fortune. He used the name to 
+                        explain how one can become successful by investing within 365 days of a year
                     </p>
                     {% if not request.user.is_authenticated %}
                     <hr class="space-sm" />
@@ -165,7 +169,7 @@
                             <ul>
                                 <li>Minimum $50</li>
                                 <li>Maximum $999</li>
-                                <li>total Profit Return: 12% </li>
+                                <li>Total Profit Return: 12% </li>
 
                                 <li>Referal 2%</li>
                             </ul>
@@ -184,7 +188,7 @@
                             <ul>
                                 <li>Minimum $1000</li>
                                 <li>Maximum $5999</li>
-                                <li>Toatal Profits 30%</li>
+                                <li>Total Profit Return 30%</li>
                                 </li>
 
                                 <li>Referal 3%</li>
@@ -205,7 +209,7 @@
                             <ul>
                                 <li>Minimum $6000</li>
                                 <li>Maximum UNLIMITED</li>
-                                <li>total Profit Return: 70%</li>
+                                <li>Total Profit Return: 70%</li>
 
                                 <li>Referal 5%</li>
                             </ul>
@@ -311,7 +315,7 @@
                     <hr class="space-sm" />
                     <ul class="accordion-list">
                         <li>
-                            <a href="#"><i class="fa-solid fa-angle-right" style="margin-right: 40px;"></i> Bitcoin mining and Trading</a>
+                            <a href="#"><i class="fa-solid fa-angle-right" style="margin-right: 40px;"></i> Crypto mining and Trading</a>
                             <div class="content">
                                 <p>
                                     To put it simply, trading is the buying and selling of financial assets.
@@ -519,6 +523,40 @@
                                     competitiveness of agro-food exports and participation in GVCs through
                                     appropriate investments in key areas such as transport infrastructure, education
                                     and research & development.
+                                </p>
+                            </div>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa-solid fa-angle-right" style="margin-right: 40px;"></i>Gold mining and Investment</a>
+                            <div class="content">
+                                <p>
+                                    Gold investment are the most suitable choice if you plan to stay invested for a period of 5 years or longer. 
+                                    Not only will you receive regular interest payouts while you stay invested in this aspect, but you will also 
+                                    have the option of making tax-free redemptions after staying invested for at least 5 years 
+                                </p>
+                            </div>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa-solid fa-angle-right" style="margin-right: 40px;"></i>Real estate management</a>
+                            <div class="content">
+                                <p>
+                                    Real estate investing involves buying a property and selling it later for a profit, or owning property 
+                                    and collecting rent as a form of fixed income and we will inform you when is the right time to sell it. 
+                                    It's safe and secured too with the help of our company's secured cooperatives.
+
+                                </p>
+                            </div>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa-solid fa-angle-right" style="margin-right: 40px;"></i>Non-farm payrolls (NFP)</a>
+                            <div class="content">
+                                <p>
+                                    The non-farm payrolls measure the number of people currently in employment in the US and are released 
+                                    along with the US unemployment rate.Specifically, the non-farm payrolls measure the number of people 
+                                    in employment in all businesses across the country, excluding agricultural, local government, 
+                                    private household, and not-for-profit sectors. With our top analysis we are capable of predicting 
+                                    up to 95% accurate information about the market and in turn making you huge profits too. 
+                                    Give us a trial today @www.apexfortitude.com 
                                 </p>
                             </div>
                         </li>
