--- a/cryptocurrency/website/crypto/templates/crypto/investment.html
+++ b/cryptocurrency/website/crypto/templates/crypto/investment.html
@@ -16,7 +16,7 @@
                         <ul>
                             <li>Minimum $50</li>
                             <li>Maximum $999</li>
-                            <li>total Profit Return: 12% </li>
+                            <li>Total Profit Return: 12% </li>
 
                             <li>Referal 2%</li>
                         </ul>
@@ -35,7 +35,7 @@
                         <ul>
                             <li>Minimum $1000</li>
                             <li>Maximum $5999</li>
-                            <li>Toatal Profits 30%</li>
+                            <li>Total Profit Return: 30%</li>
                             </li>
 
                             <li>Referal 3%</li>
@@ -56,7 +56,7 @@
                         <ul>
                             <li>Minimum $6000</li>
                             <li>Maximum UNLIMITED</li>
-                            <li>total Profit Return: 70%</li>
+                            <li>Total Profit Return: 70%</li>
 
                             <li>Referal 5%</li>
                         </ul>
