--- a/cryptocurrency/website/crypto/templates/crypto/home.html
+++ b/cryptocurrency/website/crypto/templates/crypto/home.html
@@ -306,7 +306,7 @@
 
     <section class="section-base">
         <div class="container">
-            <div class="row align-items-center" data-anima="fade-bottom" data-time="1000">
+            <div class="col-lg-6" style="padding-top: 0; padding-bottom: 40px;" >
                 <div class="col-lg-6">
                     <div class="title">
                         <h2>How Apex-Fortitude generates profits</h2>
@@ -400,7 +400,7 @@
                             </div>
                         </li>
                         <li>
-                            <a href="#"><i class="fa-solid fa-angle-right" style="margin-right: 20px;"></i> Agricultural trades and investment</a>
+                            <a href="#"><i class="fa-solid fa-angle-right" style="margin-right: 40px;"></i> Agricultural trades and investment</a>
                             <div class="content">
                                 <p>
                                     Trade plays a crucial role in delivering food and clothing to consumers
@@ -566,7 +566,7 @@
                 <img src="media/box-3-v=1.201990.png" alt="" />
                 </div>-->
 
-                <div class="col-lg-6" style="padding-top: 24vh; padding-left: 0 ;">
+                <div class="col-lg-6" style="padding-left: 0;" >
                     <div class="title">
                         <h2>COMPANY LIVE TRANSACTIONS</h2>
                         <p>Exclusive transactions</p>
